Stworzenie pierwszych widoków i pól na podstawie tutorialu

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-themes</artifactId>
 		</dependency>
+		<dependency>
+        		<groupId>com.vaadin</groupId>
+        		<artifactId>vaadin-client-compiled					</artifactId>
+        		<version>${vaadin.version}</version>
+    		</dependency>
 	</dependencies>
 
 	<build>
